# test_django

education/: .gitignore  README.md  db.sqlite3  entrypoint.sh  example.env  pyproject.toml
education/api/: urls.py  views.py
education/education/: settings.py  urls.py
education/product/: admin.py  models.py  serializers.py  urls.py
education/product/management/commands/: create_fake.py  create_groups.py
education/product/migrations/: 0001_initial.py
education/tests/fixtures/: data-fixtures.json
